Applied patch sent in by Edward Ribeiro. Minor tweaks to various Java classes to correct inefficient code
git-svn-id: https://database.cs.brown.edu/svn/hstore/trunk@1851 7a8f3d5b-8c5f-44cb-9125-2414a256df87